--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="dcc9fe">  <td>23/06/17 12:48:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Ecommerceappl.demo()[pri:0, instance:testss.Ecommerceappl@43195e57]">demo</td> 
-  <td>main@208866101</td>   <td></td> </tr>
+<tr bgcolor="dcc9fe">  <td>23/06/17 17:50:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Ecommerceappl.ceckorders()[pri:0, instance:testss.Ecommerceappl@1d9b7cce]">ceckorders</td> 
+  <td>main@1732502545</td>   <td></td> </tr>
+<tr bgcolor="dcc9fe">  <td>23/06/17 17:50:42</td>   <td>-13962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Ecommerceappl.demo()[pri:0, instance:testss.Ecommerceappl@1d9b7cce]">demo</td> 
+  <td>main@1732502545</td>   <td></td> </tr>
+<tr bgcolor="777aab">  <td>23/06/17 17:50:47</td>   <td>-8635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginIn()[pri:0, instance:testss.Ecommerceappl@1d9b7cce]">&gt;&gt;loginIn</td> 
+<td>&nbsp;</td>  <td>main@1732502545</td>   <td></td> </tr>
+<tr bgcolor="777aab">  <td>23/06/17 17:50:47</td>   <td>-8635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.loginIn()[pri:0, instance:testss.Ecommerceappl@1d9b7cce]">&gt;&gt;loginIn</td> 
+<td>&nbsp;</td>  <td>main@1732502545</td>   <td></td> </tr>
 </table>
